@@ -1,5 +1,8 @@
 2019-12-18  Thomas Schwinge  <thomas@codesourcery.com>
 
+	* oacc-mem.c (delete_copyout): Refactor into...
+	(goacc_exit_data): ... this.  Adjust all users.
+
 	* oacc-mem.c (present_create_copy): Refactor into...
 	(goacc_enter_data): ... this.  Adjust all users.
 
